// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExitFullScreenButton /> with kibana services is rendered 1`] = `
<div>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    In full screen mode, press ESC to exit.
  </p>
  <button
    class="exitFullScreenButton"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).,You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).,
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
,You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-test-subj="exitFullScreenModeButton"
  >
    <span
      class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="exitFullScreenModeText"
      >
        Exit full screen
      </span>
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="fullScreenExit"
        />
      </span>
    </span>
  </button>
</div>
`;

exports[`<ExitFullScreenButton /> with kibana services renders custom logo 1`] = `
<div>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    In full screen mode, press ESC to exit.
  </p>
  <button
    class="exitFullScreenButton"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).,You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).,
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
,You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-test-subj="exitFullScreenModeButton"
  >
    <span
      class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <figure
          class="euiImageWrapper emotion-euiImageWrapper"
        >
          <img
            alt="customLogo"
            class="euiImage emotion-euiImage-customSize"
            src="imageSrcAsBase64encodedstring"
            style="max-width: 16px; max-height: 16px;"
          />
        </figure>
      </span>
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="exitFullScreenModeText"
      >
        Exit full screen
      </span>
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="fullScreenExit"
        />
      </span>
    </span>
  </button>
</div>
`;

exports[`<ExitFullScreenButton /> with manual services is rendered 1`] = `
<div>
  <p
    aria-live="polite"
    class="emotion-euiScreenReaderOnly"
  >
    In full screen mode, press ESC to exit.
  </p>
  <button
    class="exitFullScreenButton"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).,You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).,
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
,You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-test-subj="exitFullScreenModeButton"
  >
    <span
      class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="exitFullScreenModeText"
      >
        Exit full screen
      </span>
      <span
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="fullScreenExit"
        />
      </span>
    </span>
  </button>
</div>
`;
